# labuh

./: .env.example  .gitignore  Caddyfile  Cargo.toml  LICENSE  README.md  TASK.md  docker-compose.yml  labuh.db  package.json
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
backend/: .env.example  Cargo.toml  Dockerfile  README.md
backend/migrations/: 0001_create_users.sql  0003_create_stacks.sql  0006_create_deployment_logs.sql  0007_create_stack_env_vars.sql  0008_add_container_name_to_env_vars.sql  0012_add_git_support_to_stacks.sql  0014_add_advanced_domain_fields.sql  0015_create_dns_configs.sql  0016_add_unique_to_dns_configs.sql  0019_add_show_branding_to_domains.sql
backend/src/: app_state.rs  config.rs  error.rs  main.rs
backend/src/api/: mod.rs  router.rs
backend/src/api/middleware/: auth.rs
backend/src/api/rest/: auth.rs  containers.rs  deployment_logs.rs  dns.rs  domains.rs  environment.rs  images.rs  mod.rs  network.rs  nodes.rs  registries.rs  resources.rs  stacks.rs  system.rs  team.rs  templates.rs  webhooks.rs
backend/src/db/: mod.rs
backend/src/domain/: compose.rs  deployment_log_repository.rs  dns_provider.rs  dns_repository.rs  domain_repository.rs  environment_repository.rs  mod.rs  registry_repository.rs  resource_repository.rs  runtime.rs  stack_repository.rs  system.rs  team_repository.rs  template_repository.rs  user_repository.rs
backend/src/domain/models/: deployment_log.rs  dns.rs  domain.rs  environment.rs  mod.rs  registry.rs  stack.rs  system.rs  template.rs  user.rs
backend/src/handlers/: domains.rs  health.rs  images.rs  registries.rs  webhooks.rs
backend/src/infrastructure/: git.rs  linux_system.rs  mod.rs
backend/src/infrastructure/auth/: password.rs
backend/src/infrastructure/caddy/: client.rs
backend/src/infrastructure/dns/: cloudflare.rs  cpanel.rs  mod.rs
backend/src/infrastructure/docker/: mod.rs  runtime.rs
backend/src/infrastructure/sqlite/: deployment_log.rs  dns.rs  domain.rs  environment.rs  mod.rs  registry.rs  resource.rs  stack.rs  team.rs  template.rs  user.rs
backend/src/infrastructure/tunnel/: manager.rs
backend/src/models/: deployment_log.rs  mod.rs  registry.rs
backend/src/services/: auth.rs  caddy.rs  container.rs  deployment_log.rs  dns_provider.rs  domain.rs  environment.rs  mod.rs  network.rs  registry.rs  stack.rs  tunnel.rs
backend/src/usecase/: auth.rs  deployment_log.rs  dns.rs  domain.rs  environment.rs  metrics_collector.rs  mod.rs  node.rs  registry.rs  resource.rs  scheduler.rs  stack.rs  system.rs  team.rs  template.rs
deploy/: Caddyfile  backup.sh  install.sh  labuh.service  quick-install.sh  restore.sh  update.sh
docs/: DEPLOYMENT.md
frontend/: Dockerfile  README.md  package-lock.json  package.json
migrations/: 0002_create_projects.sql  0003_create_deployments.sql  0004_create_activity_logs.sql  0004_create_domains.sql  0006_create_domains.sql  0007_create_registry_credentials.sql  0008_add_webhook_token.sql  0009_create_deployment_logs.sql  0010_merge_projects_to_stacks.sql  0011_create_webhook_logs.sql
src/: config.rs  error.rs  main.rs
src/handlers/: auth.rs  containers.rs  deployment_logs.rs  domains.rs  environment.rs  images.rs  mod.rs  projects.rs  registries.rs  stacks.rs  system.rs  webhooks.rs
src/middleware/: auth.rs
src/models/: mod.rs  (+4 more)
template/: ghost.json  redis.json  wordpress.json
website/: index.md  package-lock.json  package.json
(+109 files in other folders)
