[package]
name = "labuh"
version = "0.2.0"
edition = "2021"
description = "Lightweight PaaS Platform for container deployment"
authors = ["Labuh Team"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
password-hash = { version = "0.5", features = ["getrandom"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP Client (for Caddy API) - use rustls to avoid OpenSSL cross-compile issues
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Async utilities
async-trait = "0.1"

# Error handling
anyhow = "1"

# Container runtime (Docker/containerd via Docker API)
bollard = "0.18"
futures = "0.3"

# System info
libc = "0.2"

# Streaming
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# DNS resolver
hickory-resolver = "0.24"

# Cron scheduling
cron = "0.12"

# Archiving
tar = "0.4"
