[package]
name = "labuh"
version = "0.4.5"
edition = "2024"
description = "Lightweight PaaS Platform for container deployment"
authors = ["Labuh Team"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Authentication
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["getrandom"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP Client (for Caddy API) - use rustls to avoid OpenSSL cross-compile issues
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# Async utilities
async-trait = "0.1"

# Error handling
anyhow = "1"

# Container runtime (Docker/containerd via Docker API)
bollard = "0.20"
# HTTP client and body utilities
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
futures = "0.3"

# System info
libc = "0.2"

# Streaming
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# DNS resolver
hickory-resolver = { version = "0.25", features = ["tokio", "system-config"] }

# Cron scheduling
cron = "0.15"

# Archiving
tar = "0.4"
tokio-util = { version = "0.7.18", features = ["codec"] }
portable-pty = "0.9.0"
